--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run build script
-      run: bash ./build.sh
+      run: sudo apt-get install tree && ./build.sh
