--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -2,7 +2,7 @@ name: Autobuild
 on: [push]
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Run build script
