--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run build script
-      run: sudo apt-get -y install tree && ls /home/runner/work && ls /home/runner/work/files && ls /home/runner/work/files/files
+      run: sudo apt-get -y install tree && sudo /home/runner/work/files/files/build.sh 
