--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run build script
-      run: sudo apt-get -y install tree && echo "NOW LISTING /home/runner/work/files/files" && ls /home/runner/work/files/files && sudo /home/runner/work/files/files/build.sh 
+      run: sudo apt-get -y install tree && chmod +x ./build.sh && sudo ./build.sh 
