--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -25,6 +25,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: .
+          build_dir: dir
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
